tests/algorithms/x/Scala/machine_learning/decision_tree.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/machine_learning/decision_tree.scala:118: error: type mismatch;
 found   : Any
 required: Main.Tree
    return (Branch(boundary, left_tree, right_tree)).asInstanceOf[Tree]
                             ^
/workspace/mochi/tests/algorithms/x/Scala/machine_learning/decision_tree.scala:118: error: type mismatch;
 found   : Any
 required: Main.Tree
    return (Branch(boundary, left_tree, right_tree)).asInstanceOf[Tree]
                                        ^
two errors found
